<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/submit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/locationEntry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints=""
        android:hint="@string/locationHint"
        android:inputType="textPostalAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/submitButton"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/listHeader"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        app:layout_constraintTop_toBottomOf="@id/locationEntry">

        <TextView
            android:id="@+id/temperatureLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/temperatureHeader"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/pressureLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pressureLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pressureHeader"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toRightOf="@id/temperatureLabel"
            app:layout_constraintRight_toLeftOf="@id/humidityLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/humidityLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/humidityHeader"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toRightOf="@id/pressureLabel"
            app:layout_constraintRight_toLeftOf="@id/conditionsLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/conditionsLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/conditionsHeader"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toRightOf="@id/humidityLabel"
            app:layout_constraintRight_toLeftOf="@id/likelihoodLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/likelihoodLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/likelihoodHeader"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toRightOf="@id/conditionsLabel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listHeader">

        <ListView
            android:id="@+id/weatherList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locationEntry" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>